app/assets/stylesheets/users/_show.scss
#user-show-page {
  display: grid;
  grid-template-columns: [full-start] 6rem [center-start] repeat(8, [col-start] minmax(min-content, 1fr) [col-end]) [center-end] 6rem [full-end]; // 1140px / 8 columns = 140px
  width: 100vw;
  height: 92vh;
  gap: 3rem;
  padding: 4rem 0;

  .user-show-page-top {
    grid-column: center-start / center-end;
    height: 15vh;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    margin-bottom: 5rem;

    h1 {
      margin: 5rem;
    }
    h2 {
      margin-bottom: 3rem;
    }
  }

  .user-show-page-left {
    grid-column: center-start / col-start 3;
    height: 50vh;
    display: flex;
    flex-direction: column;
    align-items: center;

    p {
      color: black;
      font-size: 1.3rem;
    }

    .status {
      color: blue;
      margin: 0;
      padding-right: 2rem;
    }

    ul {
      background-color: #f2e9ad;
      border: 2px $color-primary-yellow solid;
      border-radius: 2rem;
      padding: 2rem;
      width: 100%;
      height: 100%;
      list-style: none;

      li {
        width: 100%;
        height: 3rem;
        border: 1px $color-primary-yellow solid;
        background-color: #87cefa;
        border-radius: 1rem;
        padding: auto 0;
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding-left: 1rem;
        margin: 0.5rem 0;

        a:link {
          text-decoration: none;
          color: black;
          font-size: 3;
        }

        a:visited {
          color: black;
        }
      }

      .destination {
        display: flex;
        align-items: center;
      }
    }
  }

  .user-show-page-right {
    grid-column: col-start 3 / center-end;
    height: 50vh;
    width: 70%;
    margin: 0 auto;
    border: 5px $color-primary-yellow solid;
    border-radius: 3rem;
    .map {
      border-radius: 2.4rem;
      overflow: auto;
    }
  }

  .user-show-page-bottom {
    grid-column: col-start 3 / center-end;
    display: flex;
    justify-content: center;
  }
}

